<resources>
    <string name="app_name">Contacts</string>
    <string name="nome">Name(*)</string>
    <string name="vernome">Name</string>
    <string name="apelido">Surname(*)</string>
    <string name="verapelido">Surname</string>
    <string name="numero">Mobile Phone Number(*)</string>
    <string name="vernumero">Mobile Phone Number</string>
    <string name="idade">Age</string>
    <string name="email">Email</string>
    <string name="endereco">Address</string>
    <string name="confirmar1">Are you sure you want to delete this contact?</string>
    <string name="editar">Edit</string>
    <string name="remover">Remove</string>
    <string name="confirmar2">Confirm</string>
    <string name="cancelar">Cancel</string>
    <string name="voltar">Return</string>
    <string name="editar2">Edit Contact</string>
    <string name="ver">View Contact</string>
    <string name="adicionar">Add Contact</string>
    <string name="sobre">About</string>
    <string name="trabalho1">Project no.2</string>
    <string name="trabalho2">Made by Diogo Negrão</string>
    <string name="trabalho3">Mobile Programming</string>
    <string name="versao">v2.0</string>
    <string name="aviso1">Warning</string>
    <string name="removido">Contact removed</string>
    <string name="preencher">Please fill all the mandatory (*) fields</string>
    <string name="editado">Contact updated</string>
    <string name="user">Username</string>
    <string name="passsword">Password</string>
    <string name="lembrarUser">Remember user</string>
    <string name="registar">Register</string>
    <string name="checkpasssword">Confirm Password</string>
    <string name="confirmalogout">Are you sure you want to logout?</string>
    <string name="emailinvalido">The email is not valid</string>
    <string name="userexiste">This username is already in use</string>
    <string name="preencheloginuser">Please fill the "username" field</string>
    <string name="usernamelong">Username is too long</string>
    <string name="preencheloginpass">Please fill the "password" field</string>
    <string name="passinvalida">Password cant have spaces and must have at least one number, one lower case, eight characters</string>
    <string name="confirmapassworderro">Passwords dont match</string>
    <string name="login">Login</string>
    <string name="pesquisa">Search</string>
    <string name="ordenar">Order</string>
    <string name="pesquisarnome">Enter a name to search for</string>
    <string name="avisologin">Username or Password not valid</string>
    <string name="avisoregisto">Username is already in use</string>
    <string name="avisopassword">Password does not match</string>
    <string name="passwordcurta">Password does not have minimum </string>
    <string name="cidade">City</string>




</resources>
