<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_edit"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <!-- Linha 1 -->
    <LinearLayout
        android:id="@+id/linha1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Nome -->
        <EditText
            android:id="@+id/nome"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/nome" />

        <!-- Apelido -->
        <EditText
            android:id="@+id/apelido"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/apelido" />
    </LinearLayout>

    <!-- Linha 2 -->
    <LinearLayout
        android:id="@+id/linha2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linha1">

        <!-- Numero -->
        <EditText
            android:id="@+id/numero"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:hint="@string/numero"/>

        <!-- Idade -->
        <EditText
            android:id="@+id/idade"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/idade"/>
    </LinearLayout>

    <!-- Linha 3 e 4 -->
    <LinearLayout
        android:id="@+id/linha3e4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/linha2">

        <!-- Email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

        <!-- Endereço -->
        <EditText
            android:id="@+id/endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endereco"/>
    </LinearLayout>
</RelativeLayout>