<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nome"
        android:text="@string/vernome"
        tools:ignore="MissingConstraints"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apelido"
        android:text="@string/verapelido"
        tools:ignore="MissingConstraints"
        android:layout_toRightOf="@+id/nome"
        android:layout_marginLeft="5dp"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numero"
        android:text="@string/vernumero"
        android:layout_below="@id/nome"
        android:textSize="10sp"
        android:layout_marginLeft="15dp"/>


</RelativeLayout>